2002-08-26  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	fixed --disable-ewmh

	* libs/Picture.c:
	* libs/Picture.h:
	added const to some prototypes

2002-08-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (MenuInteraction):
	(__menu_loop):
	renamed MenuInteraction to __menu_loop

	* fvwm/menus.c (pop_menu_up):
	(do_menu):
	(MenuInteraction):
	removed pdo_warp_to_title argument of pop_menu_up and changed all
	callers; logic is now in last_saved_position_hints
	(__menu_get_next_event_timeout_loop):
	began to split MenuInteraction into several sub functions
	go away, evil "goto"!

	* fvwm/style.c (style_parse_one_style_option):
	all boolean styles - and *only* boolean styles, can be prefixed with a
	'!' to invert their meaning
	(style_parse_button_style):
	moved Button and NoButton styles to separate function

	* configure.in:
	* NEWS:
	updated for 2.5.4-devel

	* configure.in:
	2.5.3 was released

	* configure.in:
	* NEWS:
	updated for 2.5.3

	* fvwm/menuitem.h (struct):
	* fvwm/menus.c (paint_menu_gradient_background):
	(paint_menu_pixmap_background):
	(paint_menu):
	(clear_expose_menu_area):
	fixed TiledPixmap menu background drawing bug
	sorted function in file and removed forward declarations

q2002-08-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/Makefile.am (LDADD):
	put -lfvwm at front of library list

	* fvwm/windowlist.c (CMD_WindowList):
	print window's page instead of current page in windowlist

2002-08-24  Bob Woodside  <dumbledore@woodsway.com>

	* fvwm/events.c (HandleButtonPress, HandleEnterNotify):
	Fix for Experimental RaiseOverUnmanaged Handling.

2002-08-22  Bob Woodside  <dumbledore@woodsway.com>

	* fvwm/focus.h:
	* fvwm/stack.h:
	New defs for Experimental RaiseOverUnmanaged Handling.

	* fvwm/events.c (HandleEnterNotify):
	* fvwm/focus.c:
	(set_focus_to_fwin)
	(focus_query_grab_buttons)
	(_focus_grab_buttons)
	(focus_grab_buttons)
	(focus_grab_buttons_client_entered)
	(_SetFocusWindow)
	(__activate_window_by_command)